--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -8,7 +8,7 @@
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
     <link rel="shortcut icon" href="~/ConstructionAdmin/img/favicon.png">
 
-    <title>Construction - Admin</title>
+    <title>Construction - Admin / @ViewData["Title"]</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/ConstructionAdmin/css/bootstrap.min.css" rel="stylesheet">
