--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using ConstructionSite.DTO.FrontViewModels.Contact
 @using ConstructionSite.DTO.FrontViewModels.Service
 @using ConstructionSite.DTO.FrontViewModels.SubService
+@using ConstructionSite.DTO.FrontViewModels.Portfolio 
 @using ConstructionSite.Helpers.Page 
 @using ConstructionSite.DTO.FrontViewModels.Testimonial
 @using ConstructionSite.DTO.AdminViewModels.News 
