--- a/ConstructionSite/wwwroot/ViewComponet.css
+++ b/ConstructionSite/wwwroot/ViewComponet.css
@@ -3,7 +3,10 @@
     width: 270px;
     height: 180px
 }
-
+.port_image{
+    width:320px;
+    height:200px;
+}
 .image-style {
     width: 1170px;
     height: 780px;
