--- a/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
@@ -1,44 +1,43 @@
 ﻿@model IEnumerable<PortfolioViewModel>
 @inject SharedLocalizationService Localizer
 
-<section id="works" class="wprt-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
-                <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</h2>
-                <div class="wprt-lines style-2 custom-1">
-                    <div class="line-1"></div>
+    <section id="works" class="wprt-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                    <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</h2>
+                    <div class="wprt-lines style-2 custom-1">
+                        <div class="line-1"></div>
+                    </div>
+                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
                 </div>
-                <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
+                <!-- /.col-md-12 -->
+
             </div>
-            <!-- /.col-md-12 -->
+            <!-- /.row -->
 
         </div>
-        <!-- /.row -->
+        <!-- /.container -->
 
-    </div>
-    <!-- /.container -->
-
-    <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
-        <div id="project-filter">
-            <div data-filter="*" class="cbp-filter-item cbp-filter-item-active">
-                <span>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
-            </div>
-            @foreach (var item in Model)
-            {
-                <div  data-id="@item.Id" class="cbp-filter-item my_filter">
-                    <span>@item.Name</span>
+        <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
+            <div id="project-filter">
+                <div data-filter="*" class="cbp-filter-item">
+                    <span class="All">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.All)</span>
                 </div>
-            }
+                @foreach (var item in Model)
+                {
+                    <div class="cbp-filter-item mains" data-id="@item.Id">
+                        <span>@item.Name</span>
+                    </div>
+                }
+            </div>
+            <div id="grid-container">
+
+            </div>
         </div>
-        <!-- /#project-filter -->
-
-        <!-- /#projects -->
-
-    </div>
-    <!--/.wprt-project -->
-
-</section>
+        <!--/.wprt-project -->
+      
+    </section>
 
 
