--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -56,10 +56,9 @@
 
                                     <td class="sorting_1">@item.Name</td>
                                     <td class=" ">@item.Tittle</td>
-
                                     <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
                                     <td class=" "><a class="edit btn btn-primary about-button" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                                    <td class=" "><a class="btn btn-danger delete delete-about about-button" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                    <td class=" "><a class="btn btn-danger delete deleteService about-button" data-id="@item.Id">Delete</a></td>
                                 </tr>
                             }
                         }
@@ -77,6 +76,18 @@
 </section>
 
 @section scripts{
+    <script>
+        $(".deleteService").click(function () {
+            var id = $(this).data("id");
+            $.ajax({
+                type: 'GET',
+                url: '/ConstructionAdmin/Service/Delete/' + id,
+                success: function () {
+                    window.location.href = "/ConstructionAdmin/Service"
+                }
+            })
+        });
+    </script>
     <script>
         $(document).ready(function () {
             $('#myTable').DataTable();
