--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -31,11 +31,7 @@
     <!-- Favicon and touch icons  -->
     <link rel="shortcut icon" href="~/assets/img/logo-light.png">
     <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png" />
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="~/https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="~/https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  
 </head>
 
 
@@ -67,29 +63,12 @@
                                 <a class="nav-cart-trigger" href="#">
                                     <span class="fa fa-language" aria-hidden="true"></span>
                                 </a>
-                                <div class="nav-shop-cart">
-                                    <div class="widget_shopping_cart_content">
-                                        <ul class="cart_list product_list_widget ">
-                                            <li id="en" class="mini_cart_item">
-                                                <a href="#">
-                                                    EN
-                                                </a>
-                                            </li>
-                                            <li id="az" class="mini_cart_item">
-                                                <a href="#">
-                                                    AZ
-                                                </a>
-                                            </li>
-                                            <li id="ru" class="mini_cart_item">
-                                                <a href="#">
-                                                    RU
-                                                </a>
-                                            </li>
-                                        </ul>
+                                @await Html.PartialAsync("Language")
+                               
                                         <!-- /.product_list_widget -->
 
-                                    </div>
-                                </div>
+                                    <!--</div>
+                                </div>-->
                             </div>
                         </div>
                         <!-- /#site-header-inner -->
