--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -2,23 +2,25 @@
 @inject SharedLocalizationService Localizer
 @section head{ 
 <style>
-
-    .imagest {
-        width: 337px;
-        height: 223px;
-    }
+    
     .cbp-item{
        
         padding:0px;
+        margin:0;
+       
+        
     }
     #projectss{
         width:400px;
         height:370px;
     }
-    .grid-container{
-        padding:0px;
-        margin:0px;
+    #grid-container{
+        hanging-punctuation
+        margin:12px;
     }
+       
+        
+    
     .datas{
        margin:0px;
     }
