--- a/ConstructionSite/Views/Portfolio/Project.cshtml
+++ b/ConstructionSite/Views/Portfolio/Project.cshtml
@@ -6,12 +6,43 @@
         {
 
 
-    <div class="cbp-item datas">
+    <div class=" cbp-item datas">
        
         <a href="/Portfolio/Detail/@item.Id" title="custom title 3">
 
-            <img class="imagest" src="@item.Image" alt="custom alt 3">
-            <p class="nese" >@item.Name</p>
+            
+
+                    <div class="cbp-item-wrapper">
+                        <div class="project-item">
+                            <div class="inner">
+                                <div class="grid">
+                                    <figure class="effect-zoe">
+
+                                        <img src="@item.Image" alt="custom alt 3" class="imagest" />
+
+                                        <figcaption>
+                                            <div>
+                                                <p>@item.Name</p>
+                                            </div>
+                                        </figcaption>
+
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+           
+
+               
+
+          
+
+            
+
+            
+           
         </a>
     </div>
 
