--- a/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
@@ -22,7 +22,7 @@
                             <div class="cbp-item">
                                 <div class="service-item clearfix">
 
-                                    <div class="thumb"><img  class="image-style-blog"src="@item.Image" style="width:350px;height:350px" alt="image" /></div>
+                                    <div class="thumb"><img  class="imageblog"src="@item.Image" style="width:350px;height:350px" alt="image" /></div>
                                     <div class="service-item-wrap">
                                         <h3 class="title font-size-18"><a asp-controller="Blog" asp-action="Detail" asp-route-id="@item.Id" blogtitle="@item.Tittle"></a></h3>
                                         <p blogtext="@item.Content"></p>
