--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -28,13 +28,13 @@
                     <div id="team-wrap" class="cbp">
                         @foreach (ServiceViewModel item in Model)
                         {
-                            <div class="cbp-item" style="width: 270px; left: 300px; top: 0px;">
+                            <div class="cbp-item" >
                                 <div class="cbp-item-wrapper">
                                     <div class="member">
                                         <div class="inner">
                                             <div class="image">
 
-                                                <div class="thumb"><img  style="width:270px;height:180px" src="@item.image" alt="image"  ></div>
+                                                <div class="thumb"><img  class="serviceImage" src="@item.image" alt="image"  ></div>
 
                                                 <ul class="socials clearfix">
                                                     <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
