--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="~/style.css">
-    <link rel="stylesheet" type="text/css" href="~/ViewComponet.css">
+    @*<link rel="stylesheet" type="text/css" href="~/ViewComponet.css">*@
     <link rel="stylesheet" type="text/css" href="~/PortfoliViewComponent.css" />
 
 
