--- a/ConstructionSite/Views/Shared/Components/Messages/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Messages/Default.cshtml
@@ -1,15 +1,7 @@
 ﻿@model MessageAddViewModel
 @inject SharedLocalizationService Localizer
 
-<div id="featured-title" class="clearfix featured-title-left">
-    <div id="featured-title-inner" class="container clearfix">
-        <div class="featured-title-inner-wrap">
-            <div class="featured-title-heading-wrap">
-                <h1 class="featured-title-heading">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h1>
-            </div>
-        </div>
-    </div>
-</div>
+
 <div id="main-content" class="site-main clearfix">
     <div id="content-wrap">
         <div id="site-content" class="site-content clearfix">
@@ -20,7 +12,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h2 class="text-center margin-bottom-20">GET IN TOUCH WITH US</h2>
+                                    <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h2>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
                                     </div>
