--- a/ConstructionSite/Views/Services/Single.cshtml
+++ b/ConstructionSite/Views/Services/Single.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ServiceViewModel
+@inject SharedLocalizationService Localizer
 @{
     ViewData["Title"] = "Single";
 }
@@ -18,11 +19,11 @@
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
 
-                <div class="row" style="float:left">
+                <div class="row">
                     <div class="col-md-12">
                         <div class="wprt-spacer" data-desktop="80" data-mobi="40" data-smobi="40" style="height:80px"></div>
 
-                        <h3 class="line-height-normal margin-bottom-10">WHAT IS INCLUDED</h3>
+                        <h3 class="line-height-normal margin-bottom-10">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.WhatIsIncluded)</h3>
                         <div class="wprt-lines style-1 custom-3">
                             <div class="line-1"></div>
                             <div class="line-2"></div>
@@ -37,21 +38,65 @@
 
 
                         <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40" style="height:50px"></div>
-                    </div><!-- /.col-md-12 -->
+                    </div>
 
-                    
+                    <div class="col-md-12">
+                        <h3 class="line-height-normal margin-bottom-10">GALLERY PROJECT</h3>
+                        <div class="wprt-lines style-1 custom-3">
+                            <div class="line-1"></div>
+                            <div class="line-2"></div>
+                        </div>
 
-                 
+                        <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25" style="height:25px"></div>
+
+                        <p class="margin-bottom-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec erat erat. Integer nulla quis fermentum hendrerit. Vestibulum eu libero volutpat, portas quam acc, tempus sem. Donec sodales quam id lorem lobortis, vitae interdum nisl vehicula.</p>
+
+                        <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30" style="height:30px"></div>
+
+                        <div class="wprt-galleries-grid arrow-style-1 has-arrows arrow60 arrow-position-2" data-layout="slider" data-column="2" data-column2="2" data-column3="1" data-column4="1" data-gaph="10" data-gapv="10">
+                            <div id="images-wrap" class="cbp cbp-caption-active cbp-caption- cbp-ready cbp-mode-slider" style="height: 278px;">
+                                <div class="cbp-wrapper-outer">
+                                    <div class="cbp-wrapper" style="width: 1646px; transform: translate3d(-828px, 0px, 0px);">
+                                        <div class="cbp-item" style="width: 404px; left: 0px; top: 0px;">
+                                            <div class="cbp-item-wrapper">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/projects/1.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/projects/1.jpg" alt="image">
+                                                </div>
+                                            </div>
+                                        </div><!--/.cbp-item -->
+
+                                     @foreach (var item in Model.image)
+	{
+		 
+	}
+
+                                        <div class="cbp-item" style="width: 404px; left: 1242px; top: 0px;">
+                                            <div class="cbp-item-wrapper">
+                                                <div class="item-wrap">
+                                                    <a class="zoom" href="assets/img/projects/1.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <img src="assets/img/projects/1.jpg" alt="image">
+                                                </div>
+                                            </div>
+                                        </div><!--/.cbp-item -->
+                                    </div>
+                                </div><div class="cbp-nav"><div class="cbp-nav-controls"><div class="cbp-nav-prev" data-slider-action="prev"></div><div class="cbp-nav-next cbp-nav-stop" data-slider-action="next"></div></div><div class="cbp-nav-pagination"><div class="cbp-nav-pagination-item" data-slider-action="jumpTo"></div><div class="cbp-nav-pagination-item cbp-nav-pagination-active" data-slider-action="jumpTo"></div></div></div>
+                            </div><!-- /#images-wrap -->
+                        </div><!-- /.wprt-galleries-grid -->
+                    </div>
+
+
+
 
                     <div class="col-md-12">
                         <div class="wprt-spacer" data-desktop="80" data-mobi="40" data-smobi="40" style="height:80px"></div>
                     </div>
                 </div><!-- /.row -->
 
-            </div><!-- /.inner-content-wrap -->
-        </div><!-- /#site-content -->
+            </div>
+        </div>
 
-      
+
     </div><!-- /#content-wrap -->
 </div>
 
