--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -43,7 +43,7 @@
                                                 </ul>
                                             </div>
                                             <div class="service-item-wrap">
-                                                <h3 class="title font-size-18"><a href="service-renovation.html">@item.Name</a></h3>
+                                                <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Services" asp-route-id="@item.Id">@item.Name</a></h3>
                                                 <p class="desc" size="@item.Tittle"></p>
                                             </div>
                                         </div>
