--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                 <div id="footer-widgets" class="container style-1">
                     <div class="row">
 
-                        @*@await Component.InvokeAsync("Adress")*@
+                        @await Component.InvokeAsync("Adress")
                         <partial name="_UsefulLink" />
                     </div>
                 </div>
