--- a/ConstructionSite/Views/Shared/_UsefulLink.cshtml
+++ b/ConstructionSite/Views/Shared/_UsefulLink.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="col-md-3">
+﻿
+<div class="col-md-3">
     <div class="widget widget_links">
         <h2 class="widget-title">Useful links</h2>
         <ul class="links col2">
