--- a/ConstructionSite/Views/Shared/Language.cshtml
+++ b/ConstructionSite/Views/Shared/Language.cshtml
@@ -8,7 +8,7 @@
                                     .ToList();
 }
         
-<div class="nav-shop-cart">
+
     <form class="widget_shopping_cart_content" asp-controller="Language" asp-action="SetLanguage" method="post" >
         <input type="hidden" name="returnUrl" value="@Context.Request.Path "/>
         Language:  
@@ -16,20 +16,19 @@
             <option hidden>Select</option>
                 @foreach (var item in cultureItems)
                 {
-                    <option class="mini_cart_item" value="@item.Name">@item.NativeName.Substring(0, 2).ToUpper()</option>
+                    <option  class="mini_cart_item" value="@item.Name">@item.NativeName.Substring(0, 2).ToUpper()</option>
                 }
         </select>
     </form>
-</div>
-             @*<form asp-controller="Language" asp-action="SetLanguage" 
-              asp-route-returnUrl="@Context.Request.Path"
-              method="post">
-            <select  name="culture" onchange="this.form.submit();"
-                    asp-for="@requestCulture.RequestCulture.UICulture.Name"
-                    asp-items="cultureItems"></select>
-        </form>*@
-   
-      
+
+            
+    <ul>
+        <li>
+            <form>
+
+            </form>
+        </li>
+    </ul>
 
 
 
