Admin panelin butun add ve edit-lerindeki save/cancel buttonlarinin yerini deyisdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -63,8 +63,8 @@
                             <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control" required>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-lg-offset-2 col-lg-10">
+                    <div class="form-group" style="margin-left: 63%;">
+                        <div class="col-lg-offset-2 col-lg-10" >
                             <button class="btn btn-success about-button" type="submit">Save</button>
                             <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
