--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
@@ -55,7 +55,7 @@
                                     <span asp-validation-for="Password" class="text-danger"></span>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="margin-left: 63%;">
                                 <div class="col-lg-offset-2 col-lg-10">
                                     <button type="submit" class="btn btn-success">Save</button>
                                     <button asp-action="index" asp-controller="account" type="button" class="btn btn-default cancel-button">Cancel</button>
