--- a/ConstructionSite/Areas/ConstructionAdmin/Views/AdminRole/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/AdminRole/Create.cshtml
@@ -20,7 +20,7 @@
                     </div>
                    
 
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 63%;">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-danger" type="submit">Save</button>
                             <button class="btn btn-default cancel-button" type="button">Cancel</button>
