--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -65,7 +65,7 @@
                             <input type="file" name="file" id="f-name" class="form-control" placeholder="Images" required>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 63%;">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-success about-button" type="submit">Save</button>
                             <button class="btn btn-default cancel-button" type="button">Cancel</button>
