--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Add.cshtml
@@ -75,7 +75,7 @@
                             <input type="email" asp-for="Email" id="f-name" class="form-control" placeholder="Email">
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 63%;">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-success about-button" type="submit">Save</button>
                             <button class="btn btn-default cancel-button" type="button">Cancel</button>
