--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -64,7 +64,7 @@
                                     <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control">
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" style="margin-left: 63%;">
                                 <div class="col-lg-offset-2 col-lg-10">
                                     <button class="btn btn-success about-button" type="submit">Save</button>
                                     <button class="btn btn-default cancel-button" type="button">Cancel</button>
