--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
@@ -60,7 +60,7 @@
                             <textarea asp-for="ContentRu" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: 63%;">
                         <div class="col-lg-offset-2 col-lg-10">
                             <button class="btn btn-success about-button" type="submit">Save</button>
                             <button class="btn btn-default cancel-button" type="button">Cancel</button>
