--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserClaims/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserClaims/Default.cshtml
@@ -1,34 +1,12 @@
 ﻿@model UserDTO
 <div class="top-nav" style="padding-bottom: 56px;">
     <ul class="nav pull-right top-menu">
-        <a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" style="padding: 5px;color: #ffc925">
-            <img src="~/ConstructionAdmin/img/profile-avatar.jpg" alt="" style="width: 25px; height:25px">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             @Model.Name
-        </a>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" class="dropdown-item">My Profile</a>
+            <a class="dropdown-item" href="#">Log Out</a>
+        </div>
     </ul>
 </div>
-
-@*
-        <!--search & user info start-->
-        <ul class="nav pull-right top-menu">
-            <li>
-                <input type="text" class="form-control search" placeholder="Search">
-            </li>
-            <!-- user login dropdown start-->
-            <li class="dropdown">
-                <a data-toggle="dropdown" class="dropdown-toggle" asp-controller="Account" asp-action="Index">
-                    <span class="username">@Model.Name</span>
-                    <b class="caret"></b>
-                </a>
-                @*<ul class="dropdown-menu extended logout">
-                        <div class="log-arrow-up"></div>
-                        <li><a asp-controller="Account" asp-action="Index"><i class=" icon-suitcase"></i>Profile</a></li>
-                        <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
-                        <li><a href="#"><i class="icon-bell-alt"></i> Notification</a></li>
-                        <li><a asp-controller="Account" asp-action="Login"><i class="icon-key"></i> Log Out</a></li>
-                    </ul>
-            </li>
-    <!-- user login dropdown end -->
-        </ul>
-    <!--search & user info end-->
-    x*@
