--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -20,7 +20,7 @@
                {
                     <article class="hentry">
                         <div class="post-media clearfix">
-                            <a href="#"><img src="@item.Imagepath" alt="image"></a>
+                            <a asp-controller="Blog" asp-action="Detail" asp-route-id="@item.Id"><img src="@item.Imagepath" alt="image"></a>
                         </div>
                         <!-- /.post-media -->
 
@@ -50,7 +50,7 @@
 
                             <div class="post-read-more">
                                 <div class="post-link">
-                                    <a asp-controller="Blog" asp-action="Detalye" asp-route-id="@item.Id">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a>
+                                    <a asp-controller="Blog" asp-action="Detail" asp-route-id="@item.Id">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a>
                                 </div>
                             </div>
                             <!-- /.post-read-more -->
