--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserClaims/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserClaims/Default.cshtml
@@ -1,15 +1,16 @@
 ﻿@model UserDTO
+
 <div class="top-nav" style="padding-bottom: 56px;">
     <ul class="nav pull-right top-menu">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: RGB(49, 49, 49); color: white;">
+        <button class="btn btn-secondary dropdown-toggle btn-hover" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: RGB(49, 49, 49); color: white;">
             @Model.Name
         </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="text-align: center">
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="text-align: center; background-color: RGB(49, 49, 49); opacity: .8; margin-top: -1px;">
             <div>
-                <a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" class="dropdown-item">My Profile</a>
+                <a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" class="dropdown-item" style="color: white;">My Profile</a>
             </div>
             <div>
-                <a class="dropdown-item" href="#">Log Out</a>
+                <a class="dropdown-item" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Logout" style="color: white;">Log Out</a>
             </div>
         </div>
     </ul>
