Account Index-in style-ni qaydaya saldim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -17,7 +17,7 @@
 </style>
 
 <!--main content start-->
-<section id="main-content">
+<section id="main-content" style="padding-left: 2%; margin-top: -1%;">
     <section class="wrapper common">
 
         <!-- page start-->
