--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
@@ -13,7 +13,7 @@
                 <p><span>Email </span>: @admin.Email</p>
             </div>
 
-            <a class="btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@admin.Id">Edit Admin Profile</a>
+            <a class="btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@admin.Id" style="width: 110px; margin-left: 2%;">Edit Profile</a>
             <a class="btn btn-danger delete-btn" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Delete" asp-route-id="@admin.Id">Delete Profile</a>
 
             <hr />
