--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -23,6 +23,7 @@
     <link href="~/lib/datatables/css/jquery.dataTables.css" rel="stylesheet" />
     @*<link href="~/style.css" rel="stylesheet" />*@
     <link rel="shortcut icon" href="~/assets/img/logo-light.png" />
+    <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet"> <!--load all styles -->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -30,12 +31,14 @@
     <![endif]-->
 
     <style>
-        .nav-sidebar{
+        .nav-sidebar {
             margin-top: 7.5em !important;
         }
+
         li.active {
             color: #ffc925;
         }
+
         #sidebar .nav-sidebar list-navbar:hover a {
             color: #ffc925;
         }
