--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
 
     <a id="scroll-top">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Top)</a>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZWUE32UR-FTJgp1QlLnQfjOUDeDrKL5Q&callback=initMap&libraries=&v=weekly"
-            defer></script>
+            ></script>
     <!-- Javascript -->
     <partial name="Javascript" />
 
