--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                             <partial name="_mainnav" />
                             <!-- /#main-nav -->
 
-                            @await Html.PartialAsync("Language")
+                            @*@await Html.PartialAsync("Language")*@
                         </div>
                         <!-- /#site-header-inner -->
                     </div>
