--- a/ConstructionSite/Views/Shared/Language.cshtml
+++ b/ConstructionSite/Views/Shared/Language.cshtml
@@ -9,24 +9,33 @@
 }
         
 
-    <form class="widget_shopping_cart_content" asp-controller="Language" asp-action="SetLanguage" method="post" >
-        <input type="hidden" name="returnUrl" value="@Context.Request.Path "/>
-        <select name="culture" onchange="this.form.submit();">
-            <option hidden>Select</option>
+    @*<form class="widget_shopping_cart_content" asp-controller="Language" asp-action="SetLanguage" method="post" >
+        <input type="hidden" name="returnUrl" value="@Context.Request.Path "/>*@
+        @*<select name="culture" onchange="this.form.submit();">*@
+           
+           
                 @foreach (var item in cultureItems)
                 {
-                    <option  class="mini_cart_item" value="@item.Name">@item.NativeName.Substring(0, 2).ToUpper()</option>
+    <span class="datas_item" style="justify-content:space-between;float:left" data-id="@item.Name">@item.NativeName.Substring(0, 2).ToUpper()</span>
+                    @*<option  class="mini_cart_item" value="@item.Name">@item.NativeName.Substring(0, 2).ToUpper()</option>*@
                 }
-        </select>
-    </form>
+        @*</select>
+    </form>*@
             
-    <ul>
-        <li>
-            <form>
+  <script>
+      $(document).ready(function () {
+          $(".datas_item").click(function () {
+            var id=  $(this).data("id");
+              $.ajax({
+                  method: "POST",
+                  url: "/Language/SetLanguage/" + id,
 
-            </form>
-        </li>
-    </ul>
+              });
+          });
+         
+      });
+    
+  </script>
 
 
 
