--- a/ConstructionSite/Views/Shared/_mainnav.cshtml
+++ b/ConstructionSite/Views/Shared/_mainnav.cshtml
@@ -1,5 +1,13 @@
 ﻿@inject SharedLocalizationService Localizer
+@using Microsoft.AspNetCore.Builder
+@using Microsoft.Extensions.Options
 
+@inject IOptions<RequestLocalizationOptions> LocOptions
+
+@{
+    var cultureItems = LocOptions.Value.SupportedUICultures
+                                    .ToList();
+}
 <nav id="main-nav" class="main-nav">
     <ul class="menu">
         <li class="current-menu-item"><a asp-controller="Home" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
@@ -13,5 +21,14 @@
         <li><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</a></li>
         <li><a asp-controller="Message" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
 
+        @foreach (var item in cultureItems)
+        {
+            
+            <li><a class="datas_item" data-id="@item.Name">
+                <input class="contexts" type="hidden"  data-id="@Context.Request.Path" />@item.NativeName.Substring(0, 2).ToUpper()</a></li>
+            @*<li class="datas_item" data-id="@item.Name">@item.NativeName.Substring(0, 2).ToUpper()</li>*@
+        }
     </ul>
 </nav>
+<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>
+<script src="~/customer/js/Language.js"></script>
